public/css/main.css
body {
  background: tomato;
  margin: 0;
  padding: 0;
}

/* Index styles */
.welcome {
  text-align: center;
  margin-top: 3rem;
  color: white;
}

.welcome img {
  height: 275px;
  width: 500px;
  border: solid 2px white;
}

.content {
  display: flex;
  flex-direction: row;
  margin: 0 2rem;
  margin-top: 3rem;
}

.content-text {
  padding: 1rem;
  font-size: 20px;
}

